correct errors on both index and styles

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                     </h3>
 
                     <h3><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt,
-                            nostrum?</a>cards
+                            nostrum?</a>cards </h3>
 
                         <h3><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt,
                                 nostrum?</a>
@@ -667,7 +667,7 @@
         <div class="last-section">
             <div class='last-section-head'>
                 <a href="#">
-                    <img src="./images/NewYorkTimes - Copy.png" alt="New York Times " />
+                    <img src="./images/NewYorkTimes.png" alt="New York Times " />
                 </a>
                 <a href="#">Go to Home Page »</a>
             </div>
