correct all linters

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
           </a>
         </div>
       </div>
-      <form action="" method="">
+      <form>
         <fieldset>
           <legend>Give Us Your Views</legend>
           <ul>
